--- a/AngularProject/src/app/Component/Admin/contractor-training/contractor-training.component.scss
+++ b/AngularProject/src/app/Component/Admin/contractor-training/contractor-training.component.scss
@@ -246,7 +246,10 @@ td.reftheam {
 }
 
 // sticky scroll css
-
+.customTable tr td {
+  max-width: 300px;
+  white-space: normal;
+}
 .customTable thead tr th {
   white-space: nowrap;
   top: 0;
