--- a/AngularProject/src/app/Component/Admin/ltc-result/ltc-result.component.scss
+++ b/AngularProject/src/app/Component/Admin/ltc-result/ltc-result.component.scss
@@ -264,7 +264,10 @@
 }
 
 // sticky scroll css
-
+.customTable tr td {
+  max-width: 300px;
+  white-space: normal;
+}
 .customTable thead tr th {
   white-space: nowrap;
   top: 0;
